--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -45,7 +45,7 @@
             </intent-filter>
         </receiver>
 
-        <service android:name="com.webonise.gcmdemo.GCMIntentService" />
+        <service android:name="com.webonise.gcmdemo.gcm.GCMIntentService" />
     </application>
 
 </manifest>
