--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,12 +12,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="com.webonise.gcmdemo.permission.C2D_MESSAGE" />
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission
         android:name="com.webonise.gcmdemo.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+    <uses-permission
+        android:name="com.webonise.gcmdemo.permission.C2D_MESSAGE" />
+
+    <!-- This app has permission to register and receive data message. -->
+    <uses-permission
+        android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
         android:allowBackup="true"
@@ -41,11 +45,11 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="com.webonise.gcm" />
+                <category android:name="com.webonise.gcmdemo" />
             </intent-filter>
         </receiver>
 
-        <service android:name="com.webonise.gcmdemo.gcm.GCMIntentService" />
+        <service android:name="com.webonise.gcmdemo.GCMIntentService" />
     </application>
 
 </manifest>
